# Palletizing-Simulation

./: README.md
palletizing_robot_description/: CMakeLists.txt  package.xml
palletizing_robot_description/config/: config.rviz  joint_limits.yaml
palletizing_robot_description/launch/: rviz.launch.py
palletizing_robot_description/urdf/: gripper.xacro  palletizing_robot.urdf.xacro
palletizing_robot_gazebo/: CMakeLists.txt  package.xml
palletizing_robot_gazebo/config/: controller.yaml
palletizing_robot_gazebo/launch/: gazebo_test.launch.py
palletizing_robot_gazebo/models/conveyor_belt/: model.sdf
palletizing_robot_gazebo/models/small_box/: model.sdf
palletizing_robot_gazebo/models/test_box/: model.sdf
palletizing_robot_gazebo/worlds/: robot_environment.world  test_world.world
palletizing_robot_interfaces/: CMakeLists.txt  package.xml
palletizing_robot_interfaces/srv/: Palletization.srv
palletizing_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
palletizing_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  pr.ros2_control.xacro  pr.srdf  pr.urdf.xacro
palletizing_robot_moveit_config/launch/: demo.launch.py  gazebo_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
palletizing_robot_nodes/: CMakeLists.txt  package.xml
palletizing_robot_nodes/include/: collision_environment.hpp  pattern_generation.hpp  robot_motion.hpp
palletizing_robot_nodes/launch/: palletizing.launch.py  pick_n_place.launch.py
palletizing_robot_nodes/src/: end_effector_logger_node.cpp  joint_logger_node.cpp  move_robot.cpp  palletization_service.cpp  pick_n_place.cpp  spawner.cpp
